demo-app/overlays/local/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: psql
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: demo-local
    ports:
    - port: 5432
  podSelector: 
    matchLabels:
      app.kubernetes.io/name: postgresql
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-client
spec:
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: postgresql
    ports:
    - port: 5432
  podSelector: 
    matchLabels:
      app.kubernetes.io/instance: demo-local
  policyTypes:
  - Egress
